--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Ourted\\": "src/",
-            "Atlas\\": "Atlas/src/"
+            "Ourted\\": "src/"
         }
     }
 }
